# reflex-jsx

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  jsx-parser.cabal  reflex-jsx.cabal  shell.nix  stack.yaml
app/: JSXParser.hs  JSXQuoter.hs  Main.hs
src/: Main.hs  ReflexJsx.hs
src/ReflexJsx/: Parser.hs  QQ.hs
test/: Main.hs
