name:                reflex-jsx
version:             0.1.0.0
stability:           Experimental
synopsis:            Use jsx-like syntax in Reflex
description:
homepage:            https://github.com/dackerman/reflex-jsx
bug-reports:         https://github.com/dackerman/reflex-jsx/issues
license:             BSD3
license-file:        LICENSE
author:              David Ackerman
maintainer:          david.w.ackerman@gmail.com
copyright:           2016 David Ackerman
category:            FRP, Web, GUI, JSX, Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ReflexJsx
                     , ReflexJsx.Parser
                     , ReflexJsx.QQ
  ghc-options:         -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans
  build-depends:       base
                     , parsec >= 3.1 && < 3.2
                     , reflex
                     , reflex-dom
                     , template-haskell
                     , haskell-src-meta
                     , containers
                     , text
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/dackerman/reflex-jsx
