name:                reflex-jsx
version:             0.1.0.0
stability:           Experimental
synopsis:            Use jsx-like syntax in Reflex
description:         `reflex-jsx` is a library for writing jsx-like syntax in
                     reflex code. This can be useful for situations where you
                     have a large block of HTML with some styles, and it would
                     be easier to read as actual HTML than various reflex
                     functions.

                     It's implemented as a "QuasiQuoter", so you just import the
                     `jsx` function from ReflexJsx and generate the equivalent
                     functions that would run inside of a "MonadWidget t m".

                     Not only can you generate a block of static HTML/CSS, but you
                     can also splice in your own nodes that implement
                     "MonadWidget t m", string attribute values, or even entire
                     dynamic attribute maps.

homepage:            https://github.com/dackerman/reflex-jsx
bug-reports:         https://github.com/dackerman/reflex-jsx/issues
license:             BSD3
license-file:        LICENSE
author:              David Ackerman
maintainer:          david.w.ackerman@gmail.com
copyright:           2016 David Ackerman
category:            FRP, Web, GUI, JSX, Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ReflexJsx
                     , ReflexJsx.Parser
                     , ReflexJsx.QQ
  ghc-options:         -Wall -fwarn-tabs -funbox-strict-fields -ferror-spans
  build-depends:       base >= 4.8 && < 5
                     , parsec >= 3.1 && < 3.2
                     , reflex
                     , reflex-dom
                     , template-haskell
                     , haskell-src-meta
                     , containers
                     , text
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/dackerman/reflex-jsx
